kubernetes/core/prefect/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prefect-db
  annotations:
    argocd.argoproj.io/sync-wave: "120"
    metallb.universe.tf/allow-shared-ip: "shared-ip"
    metallb.universe.tf/loadBalancerIPs: 192.168.69.38
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: prefect-server-postgresql
